--- a/index.html
+++ b/index.html
@@ -13,11 +13,24 @@
         background: #000;
         width: 100%;
         height: 100%;
+        text-align: center;
+      }
+      #root {
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 0;
+      }
+      .text {
+        margin-top: 15vh;
+        position: relative;
+        max-width: 50%;
       }
     </style>
   </head>
   <body>
     <canvas id="root"></canvas>
+    <img class="text" alt="doom.fish.industries" src="/text.png" />
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
