--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/fav.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>doom.fish.industries</title>
     <style>
@@ -30,7 +30,7 @@
   </head>
   <body>
     <canvas id="root"></canvas>
-    <img class="text" alt="doom.fish.industries" src="/text.png" />
+    <!-- <img class="text" alt="doom.fish.industries" src="/text.png" /> -->
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
