--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </head>
   <body>
     <canvas id="root"></canvas>
-    <!-- <img class="text" alt="doom.fish.industries" src="/text.png" /> -->
+    <img class="text" alt="doom.fish.industries" src="/text.png" />
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
