--- a/index.html
+++ b/index.html
@@ -4,33 +4,47 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/fav.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link href="/aware.ttf" rel="stylesheet" />
     <title>doom.fish.industries</title>
     <style>
-      #root,
       html,
       body {
         margin: 0;
         background: #000;
         width: 100%;
         height: 100%;
+        font-family: aware;
+        font-weight: bold;
         text-align: center;
       }
       #root {
+        width: 100%;
+        height: 100%;
+        /* transform: scale(0.5, 0.5) translate3d(-50%, -50%, 0); */
+
         position: absolute;
+        margin: auto;
         top: 0;
         left: 0;
         z-index: 0;
       }
       .text {
-        margin-top: 15vh;
+        color: rgb(255, 255, 0);
+        line-height: 1;
+
+        top: 66%;
+
+        transform: translateY(-100%);
+        text-shadow: 0px 0px 20px rgba(255, 255, 0, 1);
         position: relative;
-        max-width: 50%;
+        font-size: 120px;
       }
     </style>
   </head>
   <body>
     <canvas id="root"></canvas>
-    <img class="text" alt="doom.fish.industries" src="/text.png" />
+    <h1 class="text">SQUADFISH</h1>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
