--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       #root,
       html,
       body {
+        background-color: #000;
         background: url("/image.webp");
         background-size: cover;
         background-position:
